<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_news"
            android:icon="@mipmap/ic_news"
            android:title="@string/news" />
        <item
            android:id="@+id/nav_sports"
            android:icon="@mipmap/ic_sports"
            android:title="@string/sports" />
        <item
            android:id="@+id/nav_science"
            android:icon="@mipmap/ic_science"
            android:title="@string/science" />
        <item
            android:id="@+id/nav_tech"
            android:icon="@mipmap/ic_tech"
            android:title="@string/technology" />

        <item
            android:id="@+id/nav_world"
            android:icon="@mipmap/ic_world"
            android:title="@string/world" />

        <item
            android:id="@+id/nav_politics"
            android:icon="@mipmap/ic_politics"
            android:title="@string/politics" />
    </group>

    <item
        android:id="@+id/nav_favorites"
        android:icon="@mipmap/ic_favorite"
        android:title="@string/favorites" />

</menu>